--- a/index.html
+++ b/index.html
@@ -60,6 +60,135 @@
   </div>
 
   <section id="contact">
+
+    <main>
+            <div class="mistery-presentation">
+                <img src="https://s19.postimg.cc/pi60vutj7/sherlock-holmes.png" alt="investigator" class="mistery-logo">
+                <h1>Mistery Table</h1>
+                <span>(desktop only)</span>
+                <p>
+                    On the night party of his 90th birthday, in the faboulus Coral Mansion, Lord Snob of Snobovia has been robbed of his most
+                    precious gem, the "Coral Ruby", situated in Lord Snob's study. No one of the party goers has leaved the Mansion.
+                    Miss Agatha Finch, notorious investigator, has been summoned to solve the mistery. Help Agatha find the burglar!
+
+                </p>
+
+            </div>
+            <div class="mistery-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <td colspan="9" id="description">The Crime Scene and People. Click on a cell to see the description.</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">The study</th>
+                            <td>
+                                <button class="button mistery-button" data-index="1">The Ruby Display Case</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="2">The chippendale desk</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="3">The Ancient carpet</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="4">The Books</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="5">A small round table</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="6">The Bay Window</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="7">The mantel clock</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button" data-index="8">The Ottoman</button>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">The party Goers</th>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="9">Lady Claire Ashton</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="10">Dr Henry Granger</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="11">Miss Laure Lavander</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers mistery" data-index="12">Mr John Brimbutton</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="13">Lady Emily Sullivan</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="14">Lord Edward Sullivan</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="15">Lord Stewart Grissom</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button party-goers" data-index="16">Mr Strand</button>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">The Coral Mansion inhabitants</th>
+                            <td>
+                                <button class="button mistery-button inhabitants " data-index="17"> Lord Benjamin Snob</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="18">Lady Amelia Snob</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="19">The butler</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="20">The waitress</button>
+                            </td>
+
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="21">The cook</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="22">Faust the cat</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="23">The stableman</button>
+                            </td>
+                            <td>
+                                <button class="button mistery-button inhabitants" data-index="24">The boy</button>
+                            </td>
+
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="9">
+                                <button class="button interrogate-goers">Interrogate the Party Goers</button>
+                                <button class="button interrogate-inhabitants">Interrogate the inhabitants</button>
+     <button class="button reset">Reload game</button>
+
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td colspan="9">
+                                <button class="button culprit">Choose the Culprit!</button>
+                            </td>
+
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </main>
+
     <div class="overlay">
       <div class="containers">
 
